--- a/mobility_geo/pubspec.yaml
+++ b/mobility_geo/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   geolocator:
     path: ../geolocator_custom/
   path_provider:
+  firebase_core: ^0.4.0+9
+  #cloud_firestore: 0.13.2+1
+  firebase_database: 3.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
