--- a/mobility_features/pubspec.yaml
+++ b/mobility_features/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   simple_cluster: ^0.2.0
   stats: ^0.2.0+3
+  path_provider:
 
 dev_dependencies:
   flutter_test:
