--- a/mobility_demo/pubspec.yaml
+++ b/mobility_demo/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   firebase_core: ^0.4.0+9
   firebase_storage: 3.1.1
   firebase_database: 3.1.1
-
+  intl:
   mobility_features:
     path: ../mobility_features/
 
