--- a/mobility_study_demo/pubspec.yaml
+++ b/mobility_study_demo/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   uuid: ^2.0.4
+  shared_preferences: ^0.5.6
   flutter_launcher_icons: 0.7.4
   geolocator:
     path: ../geolocator_custom/
