--- a/mobility_study_demo/pubspec.yaml
+++ b/mobility_study_demo/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   intl:
   mobility_features:
     path: ../mobility_features/
+  foreground_service:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
