--- a/mobility_study_demo/pubspec.yaml
+++ b/mobility_study_demo/pubspec.yaml
@@ -28,7 +28,11 @@ dependencies:
   intl:
   mobility_features:
     path: ../mobility_features/
-  foreground_service:
+  # Firebase dependencies
+  firebase_core: ^0.4.0+9
+  firebase_storage: 3.1.1
+  firebase_database: 3.1.1
+#  foreground_service:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
