--- a/mobility_study_demo/ios/Runner/GoogleService-Info.plist
+++ b/mobility_study_demo/ios/Runner/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>493104287870-h373fc85oai1dukikguds2uq5ichhpid.apps.googleusercontent.com</string>
+	<string>493104287870-cetr0g791j04mvpc4ir0dbrp8r0cc118.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.493104287870-h373fc85oai1dukikguds2uq5ichhpid</string>
+	<string>com.googleusercontent.apps.493104287870-cetr0g791j04mvpc4ir0dbrp8r0cc118</string>
 	<key>ANDROID_CLIENT_ID</key>
 	<string>493104287870-viudhl3t4qgk387obldfs4isncqgoskm.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>cachet.apps.mobilityStudyDemo</string>
+	<string>tnni.apps.mobilityStudyDemo</string>
 	<key>PROJECT_ID</key>
 	<string>mobilityfeatures</string>
 	<key>STORAGE_BUCKET</key>
@@ -31,7 +31,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:493104287870:ios:e1627f16271ffb2fb0082f</string>
+	<string>1:493104287870:ios:65121976682466cfb0082f</string>
 	<key>DATABASE_URL</key>
 	<string>https://mobilityfeatures.firebaseio.com</string>
 </dict>
