--- a/mobility_study_demo/pubspec.yaml
+++ b/mobility_study_demo/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_core: ^0.4.0+9
   firebase_storage: 3.1.1
   firebase_database: 3.1.1
+  flutter_picker: ^1.1.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
