--- a/mobility_study_demo/pubspec.yaml
+++ b/mobility_study_demo/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_storage: 3.1.1
   firebase_database: 3.1.1
   flutter_picker: ^1.1.3
+  firebase_messaging: ^6.0.13
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
