--- a/mobility_features/pubspec.yaml
+++ b/mobility_features/pubspec.yaml
@@ -1,8 +1,7 @@
 name: mobility_features
-description: A new Flutter project.
+description: Real-time mobility feature calculation
 version: 0.0.1
-author:
-homepage:
+homepage: https://github.com/cph-cachet/flutter-plugins/
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -12,7 +11,7 @@ dependencies:
     sdk: flutter
   simple_cluster: ^0.2.0
   stats: ^0.2.0+3
-  path_provider:
+  path_provider: ^1.6.7
 
 dev_dependencies:
   flutter_test:
